[Core] [SPI] Fixed file spi